--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <h3>간단한 자기소개</h3><br><hr>
   <div class="boxes">
     <div class="box1">
-      <a href="github.com/hrz1205" style="color: white;">깃허브 링크</a>
+      <a href="https://github.com/hrz1205" style="color: white;">깃허브 링크</a>
     </div>
     <div class="box2">
       <a href="#" style="color: white;">블로그 링크</a>
